--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>Testando o Git</h2>
 
     <script src="./js/app.js"></script>
+    <script src="./js/base.js"></script>
 </body>
 </html>
